--- a/index.html
+++ b/index.html
@@ -101,11 +101,15 @@
     </ul>
   </section>
 
+  <div class="btn">
+    <a class="btn-a " href="index.html">Top</a>
+  </div>
+
   <footer class="copyright">
     <p>All rights reserved.</p>
   </footer>
 
-  <script src="/main.js"></script>
+  <script src="/script.js"></script>
 </body>
 
 </html>
